--- a/site/buy.html
+++ b/site/buy.html
@@ -56,7 +56,7 @@
 				<p>You can now visit <b style="font-size: 18px; color: blue;">strog.com</b> any time and play! Good Luck!</p>
 			</div>
 			<div class="modal-footer">
-				<a type="button" class="btn btn-primary" href="/logout.html">Logout</a>&nbsp;
+				<a type="button" class="btn btn-primary" href="/logout">Logout</a>&nbsp;
 				<a type="button" class="btn btn-primary" href="/index.html">Play Now</a>
 			</div>
 		</div>
